syntax = "proto3";

package chatserver;

option go_package = "./pkg";

message FromClient {

    string name = 1;
    string body = 2;
    int32 room_number = 3;  // 채팅방 번호 추가
}

message FromServer {

    string name = 1;
    string body = 2; 
}

service Services {
    rpc ChatService(stream FromClient) returns (stream FromServer){};
}